--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   go_router: ^14.0.0
   shared_preferences: ^2.0.0
   qr_flutter: ^4.0.0
+  url_launcher: ^6.0.0
 
 dev_dependencies:
   flutter_test:
