--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   shared_preferences: ^2.0.0
   qr_flutter: ^4.0.0
   url_launcher: ^6.0.0
+  http: ^1.0.0
 
 dev_dependencies:
   flutter_test:
