--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   qr_flutter: ^4.0.0
   url_launcher: ^6.0.0
   http: ^1.0.0
+  flutter_svg: ^2.0.0
+  google_fonts: ^6.3.2
 
 dev_dependencies:
   flutter_test:
