--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,6 @@ flutter:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/icon.png"
+  image_path: "assets/icon2.png"
   min_sdk_android: 21
   remove_alpha_ios: true
